package ib.ffi.compute.v3_3_0;


// full sweep

message FullSweepArgs {
  required AssayConfiguration assay_config = 1;
  repeated ConvertedSample converted_samples = 2;
}

message FullSweepResult {
  repeated QuantitatedSample quantitated_samples = 1;
}


// assay config

message AssayConfiguration {
  required string name = 1;
}


// quantitated

message QuantitatedSample {
  required string id = 1;
  required string name = 2;
  required string unique_id = 3;
  repeated QuantitatedCompound quantitated_compounds = 4;
}

message QuantitatedCompound {
  required string id = 1;
  required string name = 2;
  repeated QuantitatedChromatogram quantitated_chromatograms = 3;
}

message QuantitatedChromatogram {
  required string id = 1;
  required string name = 2;
}


// converted

message ConvertedSample {
  required string id = 1;
  required string unique_id = 2;
  repeated ConvertedChromatogram converted_chromatograms = 3;
}

message ConvertedChromatogram {
  required string id = 1;
  optional double precursor = 2;
  required double product = 3;
  required string polarity = 4;
  optional double collision_energy = 5;
}
